@@ -42,6 +42,7 @@ Changes in 3.2.3:
 - Fix bug in sleep suppression feature causing it to not work when torrents get started at startup (195991)
 - Also announce to DHT node when we get back a GetPeers with nodes (194366)
 - Use deleteLater when removing torrents this should prevent a crash (197421)
+- Do not keep pointer to view menu and groupview menu, this causes crashes when toolbars are reconfigured (198963)
 
 Changes in 3.2.2 :
 - Fix crash when changing speed limits using system tray menu (188447)
